name:                grtos
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Operating System
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.GRTOS,
                        Ivory.GRTOS.AST,
                        Ivory.GRTOS.Kernel,
                        Ivory.GRTOS.PriorityGroup

  build-depends:        base >= 4.6,
                        monadLib,
                        ivory,
                        ivory-stdlib,
                        ivory-backend-c

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
