name:                grtos
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Operating System
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3


data-files: support/grtos_FreeRTOSConfig.h,
            support/grtos_FreeRTOS.h,
            support/grtos_kernel.h,
            support/grtos_kernel.c,
            support/grtos_syscalls.c,
            support/grtos_portable.h,
            support/grtos_projdefs.h,
            support/grtos_tcb_type.h,
            support/port_GCC_ARM_CM4F/grtos_port.c,
            support/port_GCC_ARM_CM4F/grtos_portmacro.h

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.GRTOS.AST,
                        Ivory.GRTOS.Kernel,
                        Ivory.GRTOS.Kernel.TaskControlBlock,
                        Ivory.GRTOS.PriorityGroup,
                        Ivory.GRTOS.System,
                        Ivory.GRTOS.SearchDir

  other-modules:        Paths_grtos

  build-depends:        base >= 4.6,
                        filepath,
                        ivory,
                        ivory-stdlib,
                        ivory-backend-c

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

executable grtos-test-gen
  main-is:             GRTOS.hs
  hs-source-dirs:      tests
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       grtos
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

