name:                tower-freertos
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-freertos-wrapper/freertos_atomic_wrapper.h,
            ivory-freertos-wrapper/freertos_atomic_wrapper.c,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.h,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.c,
            ivory-freertos-wrapper/freertos_task_wrapper.h,
            ivory-freertos-wrapper/freertos_task_wrapper.c,
            ivory-freertos-wrapper/freertos_time_wrapper.h,
            ivory-freertos-wrapper/freertos_time_wrapper.c

library
  exposed-modules:      Ivory.OS.FreeRTOS.Atomic,
                        Ivory.OS.FreeRTOS.BinarySemaphore,
                        Ivory.OS.FreeRTOS.CountingSemaphore,
                        Ivory.OS.FreeRTOS.Mutex,
                        Ivory.OS.FreeRTOS.Task,
                        Ivory.OS.FreeRTOS.TaskArg,
                        Ivory.OS.FreeRTOS.Time,
                        Ivory.OS.FreeRTOS.SearchDir

  other-modules:        Paths_tower_freertos

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        xml,
                        ivory,
                        ivory-stdlib

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
