name:                ivory-freertos-bindings
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-freertos-wrapper/freertos_atomic_wrapper.h,
            ivory-freertos-wrapper/freertos_atomic_wrapper.c,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.h,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.c,
            ivory-freertos-wrapper/freertos_task_wrapper.h,
            ivory-freertos-wrapper/freertos_task_wrapper.c,
            ivory-freertos-wrapper/freertos_time_wrapper.h,
            ivory-freertos-wrapper/freertos_time_wrapper.c,
            freertos-sources/FreeRTOSConfig.h.template,
            freertos-sources/croutine.c,
            freertos-sources/list.c,
            freertos-sources/queue.c,
            freertos-sources/tasks.c,
            freertos-sources/timers.c,
            freertos-sources/include/FreeRTOS.h,
            freertos-sources/include/StackMacros.h,
            freertos-sources/include/croutine.h,
            freertos-sources/include/list.h,
            freertos-sources/include/mpu_wrappers.h,
            freertos-sources/include/portable.h,
            freertos-sources/include/projdefs.h,
            freertos-sources/include/queue.h,
            freertos-sources/include/semphr.h,
            freertos-sources/include/task.h,
            freertos-sources/include/timers.h,
            freertos-sources/portable/GCC/ARM_CM4F/port.c,
            freertos-sources/portable/GCC/ARM_CM4F/portmacro.h,
            freertos-sources/portable/MemMang/heap_1.c,
            freertos-sources/portable/MemMang/heap_2.c,
            freertos-sources/portable/MemMang/heap_3.c,
            freertos-sources/portable/MemMang/heap_4.c

library
  exposed-modules:      Ivory.OS.FreeRTOS.Artifacts,
                        Ivory.OS.FreeRTOS.Atomic,
                        Ivory.OS.FreeRTOS.BinarySemaphore,
                        Ivory.OS.FreeRTOS.Config,
                        Ivory.OS.FreeRTOS.CountingSemaphore,
                        Ivory.OS.FreeRTOS.Mutex,
                        Ivory.OS.FreeRTOS.Task,
                        Ivory.OS.FreeRTOS.TaskArg,
                        Ivory.OS.FreeRTOS.Time

  other-modules:        Paths_ivory_freertos_bindings

  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        ivory,
                        ivory-artifact

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
