name:                ivory-tower-aadl
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Tower.Compile.AADL,
                        Ivory.Tower.Compile.AADL.OS

  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        ivory,
                        ivory-stdlib,
                        ivory-tower >= 0.6

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

