name:                ivory-tower-aadl
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-aadl-headers/tower_gettimemillis.h

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.Tower.Compile.AADL,
                        Ivory.Tower.Compile.AADL.Assembly,
                        Ivory.Tower.Compile.AADL.Modules,
                        Ivory.Tower.Compile.AADL.OS,
                        Ivory.Tower.Compile.AADL.SearchDir
  other-modules:        Paths_ivory_tower_aadl
  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        ivory,
                        ivory-stdlib,
                        ivory-tower >= 0.6,
                        ivory-backend-aadl

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

