name:                ivory-tower-echronos
version:             0.6.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-echronos-wrapper/echronos_semaphore_wrapper.c,
            ivory-echronos-wrapper/echronos_semaphore_wrapper.h,
            ivory-echronos-wrapper/echronos_task_wrapper.c,
            ivory-echronos-wrapper/echronos_task_wrapper.h,
            ivory-echronos-wrapper/echronos_atomic_wrapper.c,
            ivory-echronos-wrapper/echronos_atomic_wrapper.h

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.OS.EChronos.Task,
                        Ivory.OS.EChronos.Semaphore,
                        Ivory.OS.EChronos.Atomic,
                        Ivory.Tower.Compile.EChronos,
                        Ivory.Tower.Compile.EChronos.Types,
                        Ivory.Tower.Compile.EChronos.ChannelQueues,
                        Ivory.Tower.Compile.EChronos.Schedule,
                        Ivory.Tower.Compile.EChronos.SharedState,
                        Ivory.Tower.Compile.EChronos.SearchDir
  other-modules:        Paths_ivory_tower_echronos
  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        ivory,
                        ivory-stdlib,
                        ivory-tower >= 0.3,
                        ivory-backend-c

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
