name:                ivory-tower-freertos
version:             0.3.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.OS.FreeRTOS,
                        Ivory.OS.FreeRTOS.Task,
                        Ivory.OS.FreeRTOS.Semaphore,
                        Ivory.OS.FreeRTOS.Queue,
                        Ivory.Tower.Compile.FreeRTOS,
                        Ivory.Tower.Compile.FreeRTOS.ChannelQueues,
                        Ivory.Tower.Compile.FreeRTOS.Schedule,
                        Ivory.Tower.Compile.FreeRTOS.SharedState

  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        ivory,
                        ivory-tower >= 0.3

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

executable ivory-tower-freertos-example
  main-is:             Main.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-backend-c,
                       ivory-tower,
                       ivory-tower-freertos
