name:                ivory-tower-freertos
version:             0.6.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-freertos-wrapper/freertos_queue_wrapper.c,
            ivory-freertos-wrapper/freertos_queue_wrapper.h,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.c,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.h,
            ivory-freertos-wrapper/freertos_task_wrapper.c,
            ivory-freertos-wrapper/freertos_task_wrapper.h

library
  exposed-modules:      Ivory.OS.FreeRTOS.Task,
                        Ivory.OS.FreeRTOS.Semaphore,
                        Ivory.OS.FreeRTOS.Queue,
                        Ivory.Tower.Compile.FreeRTOS,
                        Ivory.Tower.Compile.FreeRTOS.Types,
                        Ivory.Tower.Compile.FreeRTOS.ChannelQueues,
                        Ivory.Tower.Compile.FreeRTOS.Schedule,
                        Ivory.Tower.Compile.FreeRTOS.SharedState,
                        Ivory.Tower.Compile.FreeRTOS.SearchDir
  other-modules:        Paths_ivory_tower_freertos
  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        ivory,
                        ivory-stdlib,
                        ivory-tower >= 0.3

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

executable ivory-tower-freertos-example
  main-is:             Main.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-tower,
                       ivory-tower-freertos
