name:                ivory-tower-frontend
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.Tower.Frontend,
                        Ivory.Tower.Frontend.Options

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        ivory,
                        ivory-opts,
                        ivory-backend-c,
                        ivory-backend-aadl,
                        ivory-stdlib,
                        ivory-tower,
                        ivory-tower-freertos,
                        ivory-tower-echronos,
                        ivory-tower-aadl

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable tower-example-simple
  main-is:             FooBarSimple.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-tower,
                       ivory-tower-freertos,
                       ivory-tower-echronos,
                       ivory-tower-aadl,
                       ivory-tower-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable tower-example-signals
  main-is:             FooBarSignals.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-tower,
                       ivory-tower-freertos,
                       ivory-tower-echronos,
                       ivory-tower-aadl,
                       ivory-tower-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable tower-example-statemachine
  main-is:             StateMachine.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-tower,
                       ivory-tower-freertos,
                       ivory-tower-echronos,
                       ivory-tower-aadl,
                       ivory-tower-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

