name:                ivory-tower
version:             0.6.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Tower,
                        Ivory.Tower.Ivory,
                        Ivory.Tower.Node,
                        Ivory.Tower.Task,
                        Ivory.Tower.Signal,
                        Ivory.Tower.Tower,
                        Ivory.Tower.Monad,
                        Ivory.Tower.Types,
                        Ivory.Tower.RPC,
                        Ivory.Tower.RPC.AST,
                        Ivory.Tower.RPC.Monad,

                        Ivory.Tower.Graphviz,

                        Ivory.Tower.Test.FooBarSimple,
                        Ivory.Tower.Test.FooBarSignals

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        free,
                        ivory,
                        ivory-stdlib

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
