name:                tower-aadl
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules: Tower.AADL
                 , Tower.AADL.AST
                 , Tower.AADL.AST.Common
                 , Tower.AADL.Build.Common
                 , Tower.AADL.Build.SeL4
                 , Tower.AADL.CodeGen
                 , Tower.AADL.Compile
                 , Tower.AADL.Config
                 , Tower.AADL.FromTower
                 , Tower.AADL.Priorities
                 , Tower.AADL.Names
                 , Tower.AADL.Render
                 , Tower.AADL.Threads
                 , Tower.AADL.Render.Common
                 , Tower.AADL.Render.Types

  build-depends: base >= 4.6
               , base-compat
               , containers
               , filepath
               , wl-pprint
               , ivory >= 0.1.0.2
               , ivory-artifact
               , ivory-backend-c
               , tower
               , tower-config
               , pretty-show

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

executable test
  hs-source-dirs:   test
  main-is:          Simple.hs
  build-depends: base >= 4.6
               , base-compat
               , ivory >= 0.1.0.1
               , tower
               , tower-config
               , tower-aadl
  default-language: Haskell2010
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Tower.SrcLoc.Plugin -fplugin-opt=Ivory.Tower.SrcLoc.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall

executable test-echronos
  hs-source-dirs:   test-echronos
  main-is:          Simple.hs
  build-depends: base >= 4.6
               , base-compat
               , ivory >= 0.1.0.1
               , tower
               , tower-config
               , tower-aadl
  default-language: Haskell2010
  if impl(ghc >= 7.8)
    ghc-options:        -Wall -fhpc -fplugin=Ivory.Tower.SrcLoc.Plugin -fplugin-opt=Ivory.Tower.SrcLoc.Plugin:kill-foreign-stubs
  else
    ghc-options:        -Wall
