name:                tower-config
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
homepage:            http://ivorylang.org
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/tower

library
  exposed-modules:      Tower.Config,
                        Tower.Config.Types,
                        Tower.Config.File

  build-depends:        base >= 4.6,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        time,
                        toml
  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
--                        Tower.Config.Test

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell98
  ghc-options: -Wall
  build-depends: base >= 4.6,
                 bytestring,
                 containers,
                 directory,
                 filepath,
                 time,
                 toml,
                 tower-config

