name:                tower-config
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
homepage:            http://ivorylang.org
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
source-repository    this
  type:     git
  location: https://github.com/GaloisInc/tower

library
  exposed-modules:      Ivory.Tower.Config,
                        Ivory.Tower.Config.Document,
                        Ivory.Tower.Config.Extend,
                        Ivory.Tower.Config.Parser,
                        Ivory.Tower.Config.TOML,
                        Ivory.Tower.Config.Options,
                        Ivory.Tower.Config.Preprocess,
                        Text.TOML,
                        Text.TOML.Parser,
                        Text.TOML.Value

  build-depends:        base >= 4.6,
                        attoparsec >= 0.12.1.2,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        scientific,
                        ivory-backend-c,
                        tower
  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell98
  ghc-options: -Wall
  build-depends: base >= 4.6,
                 bytestring,
                 containers,
                 directory,
                 filepath,
                 tower,
                 tower-config

